--- a/index.html
+++ b/index.html
@@ -70,18 +70,20 @@
           <button id="sort-low-price" class="sort-btn">낮은가격순</button>
           <button id="sort-status" class="sort-btn">판매상태</button>
         </div>
-        <div class="book-info">
-          <div class="book-img">
-            <img src="/images/sample.png">
-          </div>
-          <div class="book-detail">
-            <span class="book-title">대약탈박물관</span>
-            <span>댄 힉스 지음 | 책과함께 | 2022년 03월 25일</span>
-            <span>SB091876UI</span>
-            <span>제국주의의 전리품을 소장하고있는 박물관을 그저 중립적인 유물의 보관소로 보아야 할까? ...</span>
-            <div class="book-last-line">
-              <span>정가:25,000원 | 판매가:22,500원</span>
-              <span>link>></span>
+        <div id="book-list" class="book-list">
+          <div class="book-info">
+            <div class="book-img">
+              <img src="/images/sample.png">
+            </div>
+            <div class="book-detail">
+              <span class="book-title">대약탈박물관</span>
+              <span>댄 힉스 지음 | 책과함께 | 2022년 03월 25일</span>
+              <span>SB091876UI</span>
+              <span>제국주의의 전리품을 소장하고있는 박물관을 그저 중립적인 유물의 보관소로 보아야 할까? ...</span>
+              <div class="book-last-line">
+                <span>정가:25,000원 | 판매가:22,500원</span>
+                <span>link>></span>
+              </div>
             </div>
           </div>
         </div>
