--- a/index.html
+++ b/index.html
@@ -74,31 +74,13 @@
         <div class="pagination-wrap">
           <nav aria-label="Page navigation example">
             <ul class="pagination pagination-sm">
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&lt;</span>
-                </a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&gt;</span>
-                </a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
+              
             </ul>
           </nav>
+        </div>
+        <div class="goingPage-wrap">
+          <input type="number" id="page-ipt" class="page-ipt">
+          <button id="page-btn" class="page-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
       </section>
 
