--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="main-wrap">
       <section class="header-wrap">
-        <div>
+        <div class="header-img-wrap">
           <a href="index.html">
             <img src="/images/Bookshop.png" style="width: 180px" />
           </a>
