--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="header-wrap">
         <div class="header-img-wrap">
           <a href="index.html">
-            <img src="/images/Bookshop.png" style="width: 180px" />
+            <img src="images/Bookshop.png" style="width: 180px" />
           </a>
         </div>
         <div class="center-wrap">
@@ -49,7 +49,7 @@
                 target="_blank"
               >
                 <img
-                  src="/images/logo_aladin.png"
+                  src="images/logo_aladin.png"
                   class="d-block w-100"
                   alt="..."
                 />
